[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "spatialml"
description = "Spatial modeling based on scikit-learn."
dynamic = ["version"]
authors = [
   { name = "Martin Fleischmann", email = "martin@martinfleischmann.net" },
]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.0",
    "joblib>=1.5.0",
    "libpysal>=4.12",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.3.0",
]

[project.urls]
Homepage = "https://pysal.org/spatialml/"
Documentation = "https://pysal.org/spatialml/"
Repository = "https://github.com/pysal/spatialml.git"
Issues = "https://github.com/pysal/spatialml/issues"
Changelog = "https://github.com/pysal/spatialml/releases"

[tool.setuptools.packages.find]
include = ["spatialml", "spatialml.*"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
ignore = ["N803", "N806"] # name {} should be lowercase

[tool.ruff.lint.per-file-ignores]
 "*__init__.py" = [
     "F401",  # imported but unused
     "F403",  # star import; unable to detect undefined names
 ]
 "*.ipynb" = [
    "C408",  # Unnecessary `dict` call
    "E501",  # Line too long
    "F401",  # imported but unused
]
 "**/conf.py" = [
    "A001",  # Variable is shadowing a Python builtin (Sphinx requires `copyright`)
]

[tool.ty.rules]
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
unresolved-import = "ignore"

[tool.coverage.run]
source = ["./spatialml"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["spatialml/tests/*"]


[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:The 'shapely.geos' module is deprecated*:DeprecationWarning",
    "ignore:This process \\(pid=\\d+\\) is multi-threaded*:DeprecationWarning",
    "ignore:divide by zero encountered in power:RuntimeWarning",
    "ignore:Some inputs do not have OOB scores.",
]
